test/errors/ternary_incompatible_branches.sl
# expect: COMPERROR
print(true ? 1 : "hello");
